--- a/params.yaml
+++ b/params.yaml
@@ -1,12 +1,10 @@
-prepare:
-  split: 0.20
-  seed: 20170428
-
 featurize:
   max_features: 3000
-  ngrams: 2
-
-train:
+  ngrams: '3'
+prepare:
   seed: 20170428
-  n_est: 100
+  split: 0.2
+train:
   min_split: 64
+  n_est: 100
+  seed: 20170428
